practica-networking/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: netshoot
          image: nicolaka/netshoot
          command: ["sleep"]
          args: ["3600"]
