practica-networking/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: netshoot
          image: nicolaka/netshoot
          command: ["sleep"]
          args: ["3600"]
